# Microshop

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2f133b92baf8_add_discount_count_column_to_products_.py  427b9cbc5a68_make_category_name_unique_in_categories_.py  5114bea97f1c_add_attributes_table.py  5ace262e331e_add_is_active_is_superuser_is_verified_.py  6ab152f69329_add_orders_table.py  7733918a88e4_add_user_and_product_models.py  8cd634fc4d84_add_category_status_to_categories_table.py  925b2eb63611_add_attributes_table.py  ae181d41c030_change_constraints_in_users_table.py  b462a1ee54c2_time_stamp_with_time_zone_utc.py  bcfd110646f4_edit_users_and_products_table.py  c25b69d5d9f4_add_productattributes_table.py  ca0decfc9391_add_cartitems_table.py  e32d9c1700a7_rename_tables_to_snake_case.py  e9fc27ec16c7_add_orderitems_table.py  f55ecebb0113_add_category_id_column_in_products_table.py
auth/: __init__.py
auth/jwt_auth/: __init__.py  dependencies.py  helpers.py  routes.py  scheme.py  services.py  utils.py
auth/jwt_auth/helpers/: token_creator.py  token_fields.py  user_getter_by_token.py
cers/: private_key.pem  public_key.pem
core/: config.py  startup.py
core/helpers/: __init__.py  db_helper.py  password_helper.py  prefixes.py  product_helper.py  tablename.py  tags.py  type_aliases_helper.py  user_helper.py
core/helpers/model_helpers/: __init__.py  attribute.py  cart_item.py  (+4 more)
core/mixins/: __init__.py  attribute.py  category.py  order.py  product.py  timestamp.py  user.py
db_utils/: db_helper.py
models/: __init__.py  attributes.py  base.py  cart_Items.py  categories.py  db_helper.py  order_items.py  orders.py  product_attributes.py  products.py  type_aliases.py  users.py
products/: crud.py  routes.py
routers/: __init__.py
routers/cart_items/: schemas.py
routers/categories/: crud.py  dependencies.py  helpers.py  routes.py  schemas.py  utils.py
routers/products/: __init__.py  crud.py  dependencies.py  routes.py  schemas.py
routers/users/: __init__.py  base.py  crud.py  dependencies.py  routes.py  schemas.py
users/: __init__.py  base.py  schemas.py
